# calc

./: CMakeLists.txt  Calculator.cpp  Calculator.h  DllReader.cpp  DllReader.h  README.md  calc.cpp
plugins/: funcadd.cpp  funcasin.cpp  funccos.cpp  funcdeg.cpp  funcdiv.cpp  funcfact.cpp  funcln.cpp  funclog.cpp  funcmult.cpp  funcsin.cpp  funcsub.cpp  functan.cpp
